# GEMAUT-pipeline

./: .gitignore  COMPATIBILITY_CHECK.md  INSTALL.md  LICENSE  README.md  README_CALCUL_MASQUE_AUTO.md  README_REFACTORED.md  activate_gemaut.OLD.sh  activate_gemaut.sh  bash_install_saga_gemaut.bash  bash_install_saga_gemaut.sh  config.py  config_exemple.yaml  config_manager.py  config_template.yaml  config_test.yaml  config_test_compatibility.yaml  deactivate_gemaut.sh  deactivate_gemaut_hook.sh  demo_masque_auto.py  environment.yml  gemaut_config.py  gemaut_env.yml  gemo_executor.py  image_utils.py  install_deps.sh  install_gemaut.sh  mask_computer.py  pdal_integration.py  pyproject.toml  requirements.txt  saga_integration.py  script_gemaut.py  script_run_gemaut_chantier_complet_pour_serveur.py  script_run_gemaut_refactoring.SAUVER.20241001.py  script_run_gemaut_refactoring.py  test_compatibility_check.py  test_mask_integration.py  test_save_mask.py  tile_processor.py  (+1 more)
GEMO/: CMakeLists.txt
GEMO/build_OLD/: CMakeCache.txt  main_GEMAUT_unit
GEMO/src/: Attache_Donnees.h  FonctionsGSL.OLD.cpp  Normes.cpp  Normes.h  Parametres.OLD.h  Parametres.SAUVER.cpp  TPoint2D.h  Terme_Regularisation.cpp  main_gemo_unit.cpp
RepTraVerif/tmp/: Dalle_corrigee_0_0.tif  INIT.tif  MASQUE_4gemo.tif  MNS_SousEch_tmp.tif  OUT_MNT_tmp.tif
RepTraVerif/tmp/Dalle_0_0/: Out_INIT_0_0.tif  Out_MASQUE_0_0.tif  Out_MNS_0_0.tif  Out_MNT_0_0.tif
RepTra_ground_mask_PDAL/: MASQUE_compute.tif  MASQUE_compute.tif.aux.xml  pdal_pipeline_used.json
RepTra_ground_mask_SAGA_v4/: MASQUE_compute.tif
RepTra_ground_mask_SAGA_v5/: MASQUE_SAGA_CORRIGE_apres_correction.tif.aux.xml  MASQUE_compute.tif.aux.xml
RepTra_ground_mask_SAGA_v7/: MASQUE_SAGA_CORRIGE_apres_correction.tif
SAGA/: script_saga_ground_extraction.py
docs/: IMPLEMENTATION_SUMMARY.md  INSTALL.md
examples/configs/: config_exemple_TEST.yaml
examples/scripts/: demo_compatibility.py  demo_masque_saga.py
gemaut/: __init__.py  config.py  config_manager.py  gemaut_config.py  gemo_executor.py  ground_extraction_interface.py  image_utils.py  mask_computer.py  pdal_integration.py  script_gemaut.py  tile_processor.py
gemo_unit_opencv_sans_xing/build_OLD/: Makefile  cmake_install.cmake
gemo_unit_opencv_sans_xing/src/: Attache_Donnees.cpp  FonctionsGSL.OLD.h  GEA.cpp  GEA.h  Parametres.cpp  Parametres.h  Terme_Regularisation.h  main_gemo_unit.cpp
scripts/: activate_gemaut.sh  activate_gemaut_hook.sh  bash_install_gemaut.sh  deactivate_gemaut.sh  install_deps.sh  install_gemaut.sh
scripts_test/: benchmark_pdal_vs_saga.py  test_pdal_basic.py  test_pdal_morphology.py
tests/: MNT_OUT_REFERENCE.tif  README_TESTS.md  config_test.yaml  exemple_simple.py  list_tests.py  test_mask_nodata.py  test_process_mask_integration.py  test_raster_processor.py  test_regression_mnt.py  test_validation.py
(+3222 files in other folders)
